// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pruebas en el <ProductTitle/> debe mostrar el componente con el "title" del producto 1`] = `
<div
  className="productCard undefined"
>
  <span
    className="productDescription undefined"
  >
    Coffee Mug
  </span>
</div>
`;

exports[`Pruebas en el <ProductTitle/> debe mostrar el componente correctamente con el título personalizado 1`] = `
<span
  className="productDescription undefined"
>
  Custom Product
</span>
`;
